fix broken layout from links overflowing

--- a/resources/styles/pages.css
+++ b/resources/styles/pages.css
@@ -4,6 +4,10 @@
     }
 }
 
+.archive .entry-summary {
+    @apply break-all;
+}
+
 .primers-btn a:hover,
 .primers-nav a:hover,
 .speakers-nav a:hover,
